add database mongodb atlas

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGO_URL = mongodb://localhost:27017/new-shopping
+MONGO_URL =mongodb+srv://salam135111_db_user:Maysam1380@coffe.xkjmhoq.mongodb.net/coffe
+            
 
 AccessTokenSecretKey=hgdsfh7635ghdsgdyus57235hegwjhsgd7
 RefreshTokenSecretKey=jhdgshgjgdjgj78ti74jhewgu635e3u3d
