--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/vite": "^4.1.12",
+    "@vercel/analytics": "^1.6.1",
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
